--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.11",
     "pino-pretty": "^13.1.2"
   }
