profil setting almost done need just routes to be implemented

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 JWT_SECRET="6:l'LE)5s9!`2M5VV?hpEnv>zq&chPG8e@}Oj~"
 JWT_REFRESH_SECRET="LO!j+5W=.[%kY:%-Pf2^w£l|nfiPw$4ER6T"
-JWT_EXPIRATION="7d"
+JWT_EXPIRATION="15m"
 JWT_REFRESH_EXPIRATION="7d"
 
 SMTP_SERVER=smtp.gmail.com
