--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/multipart": "^9.3.0",
     "@fastify/oauth2": "^8.1.2",
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/session": "^11.1.1",
     "@fastify/static": "^8.3.0",
     "@fastify/swagger": "^9.6.1",
@@ -30,6 +31,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
-    "pino-pretty": "^13.1.2"
+    "pino-pretty": "^13.1.2",
+    "zod": "^4.2.1"
   }
 }
