--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 */node_modules
 ./backend/uploads/*
 ./backend/database/*.db
+./backend/database/transcendence.db
 /.pnp
 .pnp.*
 .yarn/*
@@ -15,7 +16,7 @@
 
 # testing
 /coverage
-
+/backend/uploads
 # next.js
 /frontend/.next/
 /out/
@@ -34,7 +35,8 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
+.env.sample
 
 # vercel
 .vercel
@@ -42,3 +44,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
