--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.24.0",
     "jose": "^6.1.3",
     "lineicons": "^1.3.2",
     "lucide-react": "^0.544.0",
