--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,12 +2,14 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY . .
+
 RUN npm install .
 
-COPY . .
+COPY package.json ./
+
+RUN npm run build
 
 EXPOSE 3000
 
-# Vite dev server with host flag (important!)
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+CMD ["npm", "run", "start"]
