--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
+    "@mui/x-charts": "^8.26.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slider": "^1.3.6",
     "axios": "^1.13.2",
@@ -24,7 +27,7 @@
     "next": "^15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "recharts": "^3.6.0",
+    "recharts": "^3.7.0",
     "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
