--- a/.env
+++ b/.env
@@ -15,5 +15,8 @@ SMTP_PASSWORD=zwpf pvhj urmd cany
 GOOGLE_CLIENT_ID=159793214364-br0kvr41kcarf4i6vjb2a81p1g4llh3o.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=http://localhost:3001/api/oauth/google/callback
+GOOGLE_OAUTH_USERINFO_URL=https://www.googleapis.com/oauth2/v2/userinfo
+
 API_URL=http://localhost:3001
+FRONTEND_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3001
